# mkdocs-autoref-plugin

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yaml  pyproject.toml
.github/workflows/: build.yaml  publish.yaml
docs/: index.md
mkdocs_autoref_plugin/: autoref_plugin.py  autoref_plugin_test.py
